<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Horizontal Layout for Back Button and Logo-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/reg_button_bg"
                    android:contentDescription="Back"
                    android:elevation="1dp"
                    android:fontFamily="@font/fa_solid"
                    android:gravity="center"
                    android:padding="0dp"
                    android:stateListAnimator="@null"
                    android:text="\uf060"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About Us"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <!-- Mission Statement -->
            <TextView
                android:id="@+id/mission_statement_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mission_statement_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/missionStatement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mission_statement"
                android:textSize="16sp" />

            <!-- History -->
            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/historyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/history_text"
                android:textSize="16sp" />

            <!-- Contact -->
            <TextView
                android:id="@+id/contactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contact_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contactPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contact_phone"
                android:textSize="16sp" />

            <!-- Created By -->
            <TextView
                android:id="@+id/created_By"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/created_By"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/created_By_Names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/created_By_Names"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


